# dawn_wrapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SHARE_DEVICE.md  dawn_info  dawn_integration.md  get_dawn_source
.github/workflows/: build.yml  build.yml~  em-build.yml
kb/: jspi.md
lib/: fetch_dawn.sh
lib/dawn/: .gitignore  .gitmodules  .gitrepo  CMakeLists.txt  DEPS  OWNERS  PRESUBMIT.py  repo-state.txt
lib/dawn/build_overrides/: dawn.gni
lib/dawn/docs/dawn/: codegen.md  debugging.md
lib/dawn/docs/dawn/features/: framebuffer_fetch.md
lib/dawn/generator/: dawn_json_generator.py
lib/dawn/generator/templates/art/: api_kotlin_enum.kt
lib/dawn/include/dawn/wire/: WireServer.h
lib/dawn/infra/config/global/: PACKAGE.star
lib/dawn/scripts/: dawn_overrides_with_defaults.gni
lib/dawn/src/dawn/: dawn.json
lib/dawn/src/dawn/common/: BUILD.gn  CMakeLists.txt  ColorSpace.h  RefCountedWithExternalCount.h
lib/dawn/src/dawn/native/: Adapter.cpp  BUILD.gn  BindGroupLayoutInternal.cpp  BindGroupLayoutInternal.h  CMakeLists.txt  Device.cpp  Device.h  EventManager.cpp  EventManager.h  ExternalTexture.cpp  ExternalTexture.h  Pipeline.cpp  TintUtils.h  Toggles.cpp  Toggles.h
lib/dawn/src/dawn/native/d3d11/: BufferD3D11.cpp  CommandBufferD3D11.cpp  PhysicalDeviceD3D11.cpp
lib/dawn/src/dawn/native/d3d12/: CommandBufferD3D12.cpp
lib/dawn/src/dawn/native/opengl/: CommandBufferGL.cpp
lib/dawn/src/dawn/native/vulkan/: BindGroupLayoutVk.cpp  BindGroupLayoutVk.h  BindGroupVk.cpp  BindGroupVk.h  CommandBufferVk.cpp  ComputePipelineVk.cpp  ComputePipelineVk.h  DeviceVk.cpp  PhysicalDeviceVk.cpp  (+10 more)
lib/dawn/src/dawn/tests/: BUILD.gn  CMakeLists.txt  DawnTest.cpp  DawnTest.h
lib/dawn/src/dawn/utils/: WGPUHelpers.cpp  WGPUHelpers.h
lib/dawn/src/tint/: BUILD.gn  CMakeLists.txt
lib/dawn/test/tint/array/: assign_to_function_var.wgsl.expected.msl  assign_to_private_var.wgsl.expected.msl  assign_to_storage_var.wgsl.expected.msl  assign_to_workgroup_var.wgsl.expected.msl
lib/dawn/test/tint/diagnostic_filtering/: for_loop_attribute.wgsl.expected.msl  for_loop_body_attribute.wgsl.expected.msl  loop_attribute.wgsl.expected.msl  loop_body_attribute.wgsl.expected.msl  loop_continuing_attribute.wgsl.expected.msl  while_loop_attribute.wgsl.expected.msl  while_loop_body_attribute.wgsl.expected.msl
lib/dawn/test/tint/loops/: for_loop_detection.wgsl.expected.msl  loop_robustness.wgsl.expected.msl  loop_with_break_if_robustness.wgsl.expected.msl  loop_with_continuing_robustness.wgsl.expected.msl  nested_loops_robustness.wgsl.expected.msl  nested_loops_with_continuing_robustness.wgsl.expected.msl  while_with_continue.wgsl.expected.msl
lib/dawn/test/tint/samples/: compute_boids.wgsl.expected.msl  compute_boids_arg_buffer.wgsl.expected.msl
lib/dawn/tools/: fetch_dawn_dependencies.py
lib/dawn/tools/android/: BUILD.gn
lib/dawn/webgpu-cts/: compat-expectations.txt  expectations.txt
src/: bindgroup_layout_wrapper.cpp  bindgroup_layout_wrapper_impl.h  bindgroup_layout_wrapper_impl.hpp  bindgroup_set.cpp  bindgroup_set_impl.hpp  bindgroup_wrapper.cpp  bindgroup_wrapper_impl.h  bindgroup_wrapper_impl.hpp  buffer_wrapper.cpp  buffer_wrapper_impl.h  buffer_wrapper_impl.hpp  compute_wrapper.cpp  compute_wrapper_impl.h  compute_wrapper_impl.hpp  dawn_module.hpp  dawn_utils.hpp  dawn_wrapper.cpp  dawn_wrapper.h  dawn_wrapper.hpp  encoder_wrapper.cpp  encoder_wrapper_impl.h  encoder_wrapper_impl.hpp  private_utils.cpp  private_utils.hpp  render_wrapper.cpp  render_wrapper_impl.h  render_wrapper_impl.hpp  shader_base.hpp  surface_wrapper.cpp  surface_wrapper_impl.hpp  texture_output_wrapper.cpp  texture_output_wrapper_impl.h  texture_output_wrapper_impl.hpp  texture_wrapper.cpp  texture_wrapper_impl.h  texture_wrapper_impl.hpp
test/: CMakeLists.txt  build_and_run  em_build_and_run
test/lib/asserter/src/: asserter.hpp  asserter.hxx
test/src/: e  example.cpp  harness.js
(+532 files in other folders)
